# bluedrive-chat

./: .env.example  LICENSE.md  README.md  docker-compose.nvidia.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/docs/: DOCS.ipynb
backend/lib/: __init__.py  database.py  ollama.py  prompts.py  types.py  utils.py
backend/tests/: __init__.py  test_chat.py  test_database.py  test_fastapi.py  test_fe.py  test_ollama.py  test_title_generation.py  test_utils.py
database/: seed.sql
frontend/: .dockerignore  Dockerfile  app.config.ts  components.json  package.json  pnpm-lock.yaml
frontend/src/: routeTree.gen.ts  vite-env.d.ts
frontend/src/components/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/chat/: messages.tsx  models-checker.tsx
frontend/src/components/ui/: avatar.tsx  button.tsx  card.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  separator.tsx  sheet.tsx  sidebar.tsx  textarea.tsx  tooltip.tsx
frontend/src/lib/: api.ts  api.types.ts  utils.ts
frontend/src/routes/: __root.tsx  chat.$session_id.tsx  index.tsx
frontend/src/styles/: app.css
frontend/src/utils/: loggingMiddleware.tsx
ollama/: Dockerfile  entrypoint.sh
